# szachus-backend

./: .env  .gitignore  Cargo.toml  Dockerfile  compose.yaml  dev.compose.yaml  shutdown.fish  startup.fish
.sqlx/: query-00d6b7111c45541f4f733ab20166b75d7a7f40b99f3cad7343789a3f52856f6d.json  query-11991c2d3aa5dba645cc5b5ab983be85f045f4ee2c7cd94332ef528312ac92e1.json  query-1c8227c00d5c24f8551639a0fcee20a68ec29a7aa51cff1dca6851c0ff5b56e5.json  query-42c3673977a932b0acf525874ceac57e7b7ab1f0f49ad42b882fed71a4c0a19d.json  query-51b3b5045b8239cb0cc59f2b78387e1ac35dc9fcf359a64f904732c5bb333ffb.json  query-6b23c0f701210eb4f61c7b40ec9ba28c65d9acd5b87e4e6babfb951c81e02442.json  query-7544c2ff72d99a97e83cbb87aebfb19153593e8b29bf7b44a3c2cae61372ab15.json  query-8fff5b2d5efdd79976ae05409aec8a0894995c53e7cca5a5881c89c0629aa67e.json  query-b6d9316c12097fdb0e51446af5baa18a8ae9735a51548ae855c8507e5d5da9d0.json  query-e0e44e8d518742046f5e2b77e07ad2b20f4d182c80f90dcf827cd4bea45e8840.json
migrations/: 20240401164241_init.down.sql  20240401164241_init.sql  20240401164241_init.up.sql  20241218141353_game_turn_id.down.sql  20241218141353_game_turn_id.up.sql
public/: 404.html  index.js
public/assets/css/: style.css
public/assets/js/: index.js
src/: error.rs  main.rs  templates.rs
src/game/: mod.rs
src/routes/: mod.rs
src/routes/authentication/: jwt.rs  login.rs  mod.rs  register.rs
src/routes/game/: chessboard.rs  gameplay.rs  matchmaking.rs  mod.rs  opponent_pair.rs  piece.rs  piece_color.rs  position.rs  rules.rs  (+2 more)
src/user/: authentication.rs  mod.rs
templates/: index.hbs
(+21 files in other folders)
