[package]
name = "szachus-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws", "http2", "macros"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
