[package]
name = "szachus-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws", "http2", "macros"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "macros", "json", "ipnetwork", "uuid", "migrate", "chrono", "rust_decimal" ] }
tokio-rustls = "0.26.0"
rust_decimal = "1.35.0"
chrono = { version = "0.4.37", features = ["now"] }
anyhow = "1.0.81"
ipnetwork = "0.20.0"
serde = { version = "1.0.202", features = ["derive", "alloc"] }
serde_json = { version = "1.0.117", features = ["alloc"] }
argon2 = { version = "0.5.3", features = ["std"] }
rand = { version = "0.8.5", features = ["serde"] }
jsonwebtoken = "9.3.0"
dotenv = "0.15.0"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
